# alakazam

./: .gitignore  README.md
admin-nextjs/: package-lock.json  package.json
backend-spring/: pom.xml
backend-spring/src/main/java/com/alakazam/backend_spring/: ApiController.java  BackendSpringApplication.java
backend-spring/src/main/java/com/alakazam/backend_spring/config/: CorsConfig.java  RedisConfig.java
backend-spring/src/main/java/com/alakazam/backend_spring/data/: Search.java
backend-spring/src/main/java/com/alakazam/backend_spring/fingerprinter/: Fingerprinter.java
backend-spring/src/main/java/com/alakazam/backend_spring/model/: Song.java
backend-spring/src/main/java/com/example/fingerprint/: FingerprintBackendApplication.java
backend-spring/src/main/resources/: application.properties
backend-spring/src/test/java/com/alakazam/backend_spring/: BackendSpringApplicationTests.java
backend-spring/src/test/java/com/example/fingerprint/: FingerprintBackendApplicationTests.java
fingerprinter-rust/: Cargo.toml
fingerprinter-rust/src/: audio.rs  core.rs  fingerprint.rs  jni.rs  lib.rs  main.rs  models.rs  storage.rs  wasm.rs
frontend-nextjs/: package-lock.json  package.json
frontend-nextjs/public/wasm/: fingerprinter_rust.d.ts  fingerprinter_rust.js  fingerprinter_rust_bg.wasm  fingerprinter_rust_bg.wasm.d.ts  package.json
frontend-nextjs/src/app/: page.js
frontend-nextjs/src/utils/: convertWebmToWav.js
frontend-tauri/: package-lock.json  package.json
frontend-tauri/src-tauri/: Cargo.toml  tauri.conf.json
wasm-rust/: Cargo.toml
(+1 files in other folders)
