[package]
name = "fingerprinter-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hound = "3.5.1"
rustfft = "6.1.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21.1"
wasm-bindgen = "0.2.89"
