[package]
name = "fingerprinter-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hound = "3.5.1"
rustfft = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21.1"
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
